# rust-tonic-simon-says

./: README.md
proto/: simonsays.proto
rust-grpc-client/: Cargo.toml
rust-grpc-web-server/: Cargo.toml
server/k8s/: README.md  cluster.yml
server/rust-grpc-web-server/: .gitignore  Cargo.toml  build.rs
server/rust-grpc-web-server/src/: main.rs
