[package]
name = "rust-grpc-web-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.6.1"

[build-dependencies]
tonic-build = "0.6.0"